src/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;

    color-scheme: light dark;
    color: rgba(255, 255, 255, 0.87);
    background-color: #242424;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;

    --select-border: #777;
    --select-focus: blue;
    --select-arrow: var(--select-border);
}

body {
    margin: 0;
    padding: 0;
    cursor: grab;
    font-size: 144%;
    overflow: hidden;
    background-color: #000;
    color: #fff;
}

body::before {
    display: none;
    ;
}

h1, h2, h3 {
    font-weight: 200;
}

.title {
    position: absolute;
    top: 4vh;
    left: 50%;
    text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #515ad4, 0 0 30px #4998ff, 0 0 40px #2018ff, 0 0 55px #1837ff, 0 0 75px #2418ff;
    transform: translateX(-50%);
    z-index: 144;
}

.label {
    font-size: .5em;
    font-weight: 500;
    color: #fff;
    text-shadow: 0 0 .6em #646cff;
    background-color: #747bffaa;
    box-shadow: 0 0 .6em #00000044;
    padding: .2em;
    line-height: 1em;
    border-radius: .2em;
    opacity: .8;
    transition: opacity 0.25s, background-color 0.25s, font-size 0.05s ease-out;
}

.label:hover {
    opacity: 1;
    font-size: larger;
}

.form {
    display: flex;
    width: 20vh;
    height: 10vh;
    justify-content: center;
    align-items: center;
    transition: opacity 0.25s;
}

.factor {
    padding: .4em .1em .4em .86em;
    font-size: 1.2em;
    text-align: right;
    background: #ffffff55;
    border: 1px solid #aaa;
    border-radius: 0 .25em .25em 0;
}

.factor:focus {
    outline: none;
    background: #ffffffaa;
}

select {
    appearance: none;
    background-color: #535bf266;
    border: blueviolet 1px solid;
    border-radius: 0.25em 0 0 0.25em;
    border-right: 0;
    padding: .7em .5em;
    margin: 0;
    font-family: inherit;
    font-size: inherit;
    cursor: inherit;
    line-height: inherit;
    z-index: 1;
    outline: none;
    transition: opacity 0.5s ease-in-out;
}

select::-ms-expand {
    display: none;
}

select option {
    padding: 1em;
}

/* Animate width of canvas */
canvas {
    will-change: width;
    transition: width 0.25s;
    margin: 0;
}

@media only screen and (max-width: 600px) {
    body {
        font-size: 100%;
    }
}

